--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,11 +15,17 @@
         >
           Logout</a
         >
+        
       </div>
-      <h3 class="text-3xl">
+      <div class="flex item-start gap-3">
+        <div class="w-10 h-10 rounded-md overflow-hidden" >
+          <img class="w-full h-full object-cover" src="/images/uploads/<%= user.profilepic %>" alt="">
+        </div>
+        <h3 class="text-3xl">
         <span class="font-light">Hello </span> <%= user.name %>
       </h3>
-      <h5 class="mb-5">You can Create a new post</h5>
+    </div>
+      <h5 class="mb-5 mt-5">You can Create a new post</h5>
       <form action="/post" method="post">
         <textarea
           class="block p-323 outline-none w-1/3 resize-none bg-transparent border-2 border-zinc-800 rounded-md"
